--- a/src/main/java/com/uasd/insurance/vistas/principal/frm_Principal.form
+++ b/src/main/java/com/uasd/insurance/vistas/principal/frm_Principal.form
@@ -52,9 +52,6 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Palatino Linotype" size="14" style="2"/>
                 </Property>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\Sulenni\Downloads\microscope.png"/>
-                </Property>
                 <Property name="text" type="java.lang.String" value="An&#xe1;lisis"/>
               </Properties>
               <Events>
@@ -69,13 +66,24 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Palatino Linotype" size="14" style="2"/>
                 </Property>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\Sulenni\Downloads\user (3).png"/>
-                </Property>
                 <Property name="text" type="java.lang.String" value="Afiliado"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMnPrestador">
+              <Properties>
+                <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
+                  <KeyStroke key="Alt+P"/>
+                </Property>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Palatino Linotype" size="14" style="2"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Prestador"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMnPrestadorActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
@@ -95,9 +103,6 @@
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Palatino Linotype" size="14" style="2"/>
-                </Property>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\Sulenni\Downloads\notebook.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Reclamaci&#xf3;n"/>
               </Properties>
