--- a/src/main/java/com/uasd/insurance/vistas/mantenimientos/frm_BuscarServicio.form
+++ b/src/main/java/com/uasd/insurance/vistas/mantenimientos/frm_BuscarServicio.form
@@ -74,6 +74,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jtblServiciosMouseReleased"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -98,6 +101,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value=" Agregar servicio"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
